RESOLVED FIXED 189937
Don't cause a crash even when some IDL attribute is missing CEReactions
https://bugs.webkit.org/show_bug.cgi?id=189937
Summary Don't cause a crash even when some IDL attribute is missing CEReactions
Ryosuke Niwa
Reported 2018-09-24 17:06:27 PDT
It's not a good trade-off to cause a release assertion hit when there is an IDL attribute missing CEReactions. Turn this into a debug-only assertion.
Attachments
Don't release-assert even when CEReactions is missing (2.64 KB, patch)
2018-09-24 17:12 PDT, Ryosuke Niwa
simon.fraser: review+
Ryosuke Niwa
Comment 1 2018-09-24 17:12:13 PDT
Created attachment 350715 [details] Don't release-assert even when CEReactions is missing
Radar WebKit Bug Importer
Comment 2 2018-09-24 17:17:46 PDT
Ryosuke Niwa
Comment 3 2018-09-24 17:28:44 PDT
Note You need to log in before you can comment on or make changes to this bug.